Closed Bug 200780 Opened 21 years ago Closed 21 years ago

nsFontMetricsGTK::gSpecialCharSets leaks atoms

Categories

(Core Graveyard :: GFX: Gtk, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: bryner, Assigned: bryner)

Details

(Keywords: memory-leak)

Attachments

(1 file, 1 obsolete file)

It looks like the gSpecialCharSets table is not cleaned up using FreeCharSetMap
like gCharSetMaps is.  This causes a leak of the mLangGroup atom of those entries.
Attached patch patch (obsolete) — Splinter Review
Attachment #119551 - Flags: superreview?(blizzard)
Attachment #119551 - Flags: review?(bstell)
Comment on attachment 119551 [details] [diff] [review]
patch

as usual... you forgot to patch gfx/src/xlib/nsFontMetricsXlib.cpp , too... ;-(
Attachment #119551 - Flags: review?(bstell) → review-
Attachment #119551 - Attachment is obsolete: true
Attachment #119556 - Flags: superreview?(blizzard)
Attachment #119556 - Flags: review?(bstell)
Comment on attachment 119556 [details] [diff] [review]
Patch for both GTK+ and Xlib gfx

looks okay to me, r=bstell@ix.netcom.com
Attachment #119556 - Flags: review?(bstell) → review+
Comment on attachment 119556 [details] [diff] [review]
Patch for both GTK+ and Xlib gfx

sr=blizzard
Attachment #119556 - Flags: superreview?(blizzard) → superreview+
Attachment #119551 - Flags: superreview?(blizzard)
checked in and verified that leaks went down on tinderbox.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: