fix leak of atoms via gSpecialCharSets.  Bug 200780, r=bstell, sr=blizzard